Kubernetes/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: finansist
---
apiVersion: apps/v1                       
kind: Deployment                          
metadata:                                 
  namespace: finansist                      
  name: finansist              
  labels:                                 
    app: finansist              
spec:                                     
  replicas: 2    
  revisionHistoryLimit: 1
  selector:                               
    matchLabels:                          
      app: finansist                   
  template:                               
    metadata:                 
      labels:                 
        app: finansist
    spec:                     
      containers:             
        - name: finansist      
          image: "gabrielrodriguesdev/finansist-backend:latest"
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: 100Mi
              cpu: "1"
            requests:
              memory: 10Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  namespace: finansist
  name: finansist-service
spec:
  type: ClusterIP
  selector: 
    app: finansist
  ports:
    - name: finansist-service 
      port: 80
      targetPort: 80
      protocol: TCP 

---

apiVersion: networking.k8s.io/v1                                  
kind: Ingress                                                                 
metadata:                                                                     
  namespace: finansist                                                       
  name: ingress-finansist                                                        
  annotations:                                                               
    kubernetes.io/ingress.class: "nginx"                                                               
    nginx.ingress.kubernetes.io/affinity-mode: balanced                      
spec:                                                                        
  rules:                                                                     
  #- host: "api.finansist.com.br"                                        
    - http:                                                                    
        paths:                                                                 
        - path: /
          pathType: Prefix                                                     
          backend:                                                             
            service: 
              name: finansist-service
              port:
                number: 80
  # tls:
  # - hosts:
  #   - "finansist.com.br"
  #   - "*.finansist.com.br"
  #   secretName: letsencrypt-tls
